--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,11 +1,11 @@
 .product-card {
     padding: 20px;
     border-radius: 15px;
-    box-shadow: 0px 0px 30px rgba(29, 51, 95, 0.1);
+    box-shadow: 0px 0px 25px rgba(29, 51, 95, 0.075);
 }
 
 .product-card figure {
-    margin: 0 0 10px;
+    margin: 0 0 15px;
     text-align: center;
     background: #f8f8f8;
     border-radius: 12px;
@@ -38,4 +38,17 @@
     color: #292b30;
     font-size: 1rem;
     font-weight: 700;
+}
+
+.product-card button {
+    color: #ffffff;
+    font-size: 1rem;
+    font-weight: 500;
+    background: #1d335f;
+    padding: 10px 28px;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    margin: 15px auto 0 auto;
+    cursor: pointer;
 }
