--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,7 +1,8 @@
 .shop-layout {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    width: 85%;
+    gap: 20px;
+    width: 90%;
     margin: auto;
 }
 
