--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -13,3 +13,21 @@
     font-weight: 700;
     margin: 0 0 15px;
 }
+
+.cart-btn {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 600;
+    background: #1d335f;
+    padding: 10px 28px;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin: 15px auto 0 auto;
+    cursor: pointer;
+}
+
+.cart-btn.clear {
+    background: #ff0000;
+}
