--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -4,6 +4,7 @@
     gap: 20px;
     width: 90%;
     margin: auto;
+    transition: all 1s;
 }
 
 .products-wrapper {
@@ -17,4 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.cart-wrapper {
+    transition: all 0.5s;
 }
